mengubah index.html dari github

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h4>Latihan GIT camp404</h4>
     <p>Tingkatkan skill versioning di sini</p>
+    <input type="button">Daftar</input>
 </body>
 </html>
